# csv2hpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: baseball.csv  baseball.hpp  build.cpp  conv.hpp  sample2.csv  sample2.hpp
include/: converter.hpp  errors.hpp  exceptions.hpp  program_options.hpp
src/: CMakeLists.txt  converter.cpp  errors.cpp  main.cpp  program_options.cpp
tests/: CMakeLists.txt  test.cpp
